--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@terrylinla/react-native-sketch-canvas",
+  "name": "@ajovanovic92/react-native-sketch-canvas",
   "repository": {
     "type": "git",
-    "url": "https://github.com/terrylinla/react-native-sketch-canvas"
+    "url": "https://github.com/ajovanovic92/react-native-sketch-canvas"
   },
-  "version": "0.8.0",
+  "version": "1.0.0",
   "description": "react-native-sketch-canvas allows you to draw / sketch on both iOS and Android devices and sync the drawing data between users. Of course you can save as image.",
-  "author": "Terry Lin",
+  "author": "Aleksandar Jovanovic - worked from Terry Lin",
   "main": "index.js",
   "keywords": [
     "react-native",
